fixed hard to read font on game pages

--- a/frontend/src/components/About/about.css
+++ b/frontend/src/components/About/about.css
@@ -4,7 +4,8 @@
     left: 0;
     right: 0;
     bottom: 0;
-    width: auto;
+    width: 100vh;
+    height: 100vh;
     background: url('../../images/gradient-background.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -116,12 +117,14 @@
 	animation-duration:1s;
 }
 
+@media only screen and (max-width: 600px) {}
 .aboutPage {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: auto;
+    width: 100%;
     height: 500px;
+    margin: 0px 20px;
     position: relative;
     top: 30%;
     justify-content: space-evenly;
